--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.66.9",
+    "axios": "^1.8.1",
     "formik": "^2.4.6",
     "next": "15.1.7",
     "react": "^19.0.0",
